<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhouya.sp.ten.FontActivity"
    >

    <TextView
        android:id="@+id/font_text_text1"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/font_show_text"/>
    <TextView
        android:id="@+id/font_text_text2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/font_text_text1"
        android:gravity="right"
        android:text="@string/font_show_title"/>

        <RadioGroup
            android:id="@+id/font_tab_bar"
            android:paddingBottom="80dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/font_tab_small_font"
                style="@style/PersonalFont"
                android:drawableTop="@drawable/selector_personal_font_icon"
                android:text="@string/smallFont"/>
            <RadioButton
                android:id="@+id/font_tab_middle_font"
                style="@style/PersonalFont"
                android:drawableTop="@drawable/selector_personal_font_m_icon"
                android:text="@string/middleFont"/>
            <RadioButton
                android:id="@+id/font_tab_large_font"
                style="@style/PersonalFont"
                android:drawableTop="@drawable/selector_personal_font_l_icon"
                android:text="@string/largeFont"/>

        </RadioGroup>

</RelativeLayout>
