<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.zhouya.sp.ten.fragments.PersonalFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/personal_iv_loginQQ"
            android:clickable="true"
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/my_collect_film"
            android:src="@mipmap/avator_login"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/avator_whiteline"
            android:paddingTop="30dp"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_click_login"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:background="@mipmap/my_collect_film"
        android:textSize="20sp"/>

    <LinearLayout
        android:clickable="true"
        android:id="@+id/personal_ll_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:src="@mipmap/setting_favorite"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:text="@string/setting_favorite"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/setting_arrow"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333"
        android:layout_marginLeft="15dp"
        />
    <LinearLayout
        android:id="@+id/personal_ll_font"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:src="@mipmap/setting_font"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:text="@string/setting_font"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/setting_arrow"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333"
        android:layout_marginLeft="15dp"
        />
    <LinearLayout
        android:id="@+id/personal_tv_aboutUs"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:src="@mipmap/setting_aboutus"/>

        <TextView
            android:id="@+id/personal_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:text="@string/setting_aboutus"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/setting_arrow"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333"
        android:layout_marginLeft="15dp"
        />
    <LinearLayout
        android:id="@+id/personal_ll_feedback"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:src="@mipmap/setting_feedback"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:text="@string/setting_feedback"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/setting_arrow"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333"
        android:layout_marginLeft="15dp"
        />
</LinearLayout>
